# Agentrail

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  PRODUCT.md  PROJECT_SPEC.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  agentrail.db-shm  agentrail.db-wal  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a21075197c1_initial_schema.py  2b_add_users_and_user_id.py  3c_add_eval_results.py  796910624570_baseline_users_and_repos.py  7b2c_add_tour_json.py  8c3d_add_chunks_json.py
backend/api/: index.py
backend/app/: main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: approval.py  code_search.py  evidence_reader.py  fix_strategy.py  patch_generator.py  planner.py  repo_scanner.py  (+5 more)
backend/app/api/: deps.py  routes_auth.py  routes_evals.py  routes_repos.py  routes_runs.py
backend/app/core/: config.py  observability.py  security.py
backend/app/db/: models.py  session.py
backend/app/evals/: __init__.py  metrics.py  report.py  runner.py  scenarios.py
backend/app/schemas/: runs.py
backend/app/services/: e2b_service.py  github_issues.py  llm_provider.py  pr_draft.py  rag.py  repo_importer.py  repo_map.py  repo_scanner.py  run_events.py  tour.py
backend/app/tools/: file_tools.py  github_issue_url.py  github_url.py  path_policy.py  repo_scanner.py  search_tools.py  test_tools.py
backend/tests/: conftest.py  test_agent_graph.py  test_auth.py  test_config.py  test_e2b_service.py  test_evals.py  test_evidence_reader.py  test_file_tools.py  test_fix_strategy.py  test_github_issue_url.py  test_github_issues.py  test_github_url.py  test_health.py  test_llm_patch.py  test_patch_generator.py  test_path_policy.py  test_pr_draft.py  test_rag.py  test_repo_importer.py  test_repo_map.py  test_repo_scanner.py  test_repos.py  test_risk_scorer.py  test_root_cause.py  test_run_events.py  test_runs_api.py  test_search_tools.py  test_test_tools.py  test_tour.py  test_verifier.py
(+77 files in other folders)
