[project]
name = "devpilot-verify-backend"
version = "0.1.0"
description = "FastAPI backend for DevPilot Verify."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.74,<2.0.0",
    "openai>=1.52.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
