[project]
name = "agentrail-backend"
version = "0.1.0"
description = "FastAPI backend for Agentrail."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.74,<2.0.0",
    "openai>=1.52.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
