[project]
name = "agentrail-backend"
version = "0.1.0"
description = "FastAPI backend for Agentrail."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E4/E7/E9 + F: import errors, statement errors, runtime errors, pyflakes.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
